<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GroupCallWithChatActivity">

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <Button
            android:id="@+id/startCallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/call"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="4dp"
            />
        <Button
            android:id="@+id/endCallButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end_call"
            android:layout_marginStart="4dp"
            android:visibility="gone"
            />

        <Button
            android:id="@+id/connectChatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connect_chat"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="4dp"
            />

        <Button
            android:id="@+id/showHideChatButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_hide_chat"
            android:layout_marginStart="4dp"
            android:visibility="gone"
            />

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/chatContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/buttonContainer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        >

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>